--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import 'bulma/sass/elements/icon';
 @import 'bulma/sass/components/card';
 @import 'bulma/sass/layout/section';
+@import 'bulma/sass/grid/columns';
 @import 'bulma/sass/elements/title';
 @import 'bulma/sass/helpers/typography';
 @import 'bulma/sass/helpers/spacing';
