--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- <%= t('source_code_welcome')%> -->
-<html lang="<%= I18n.locale %>">
+<html lang="<%= I18n.locale %>" class="has-main-background">
 
 <head>
   <meta charset="UTF-8">
