--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="sectiona">
   <div class="container is-margin-top-128px">
     <div class="columns is-multiline is-centered is-vend is-gapless is-mobile">
       <%- ['fish', 'plumjam', 'mercedes', 'cx5', 'cabbage', 'pringlesky', 'houses', 'firebridge', 'artbridge', 'echobridge', 'glitchbridge'].shuffle.each_with_index do |image_name, i| -%>
