--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,16 @@
 
 <body>
   <%= yield %>
+  <section class="section">
+    <nav class="is-flex is-horizontal-center">
+      <%= link_to :root do %>
+      <figure class="image is-64x64 is-border-lighter-2px is-border-radius-100percent has-background-transparent">
+        <img class="is-rounded" src="<%= image_path 'photo-of-paulmwatson.jpg' %>" alt="<%= t('alts.photo_of_paulmwatson') %>">
+        <div class="is-shadow-inset is-border-radius-100percent " aria-hidden="true"></div>
+      </figure>
+      <%- end -%>
+    </nav>
+  </section>
 </body>
 
 </html>
