--- a/app/views/site/post.html.erb
+++ b/app/views/site/post.html.erb
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="section">
   <div class="hero-body is-flex is-horizontal-center">
     <div class="card animate__animated animate__bounceInRight">
       <header class="card-header">
@@ -11,9 +11,9 @@
     </div>
   </div>
 </section>
-<section class="section">
-  <div class="columns is-multiline is-mobile">
-    <%- ['fish', 'mercedes', 'plumjam', 'cx5', 'cabbage', 'pringlesky', 'echoroad', 'houses', 'firebridge', 'artbridge', 'echobridge', 'glitchbridge'].each do |image_name| -%>
+<section class="section is-pulled-up-140px">
+  <div class="columns is-multiline is-mobile is-gapless">
+    <%- ['fish', 'mercedes', 'plumjam', 'cx5', 'cabbage', 'pringlesky', 'echoroad', 'houses', 'firebridge', 'artbridge', 'echobridge', 'glitchbridge', ].each do |image_name| -%>
     <div class="column is-1-tablet is-3-mobile">
       <div class="card on-hover-expand-2x">
         <header class="card-header">
