--- a/app/views/site/post.html.erb
+++ b/app/views/site/post.html.erb
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="hero">
   <div class="hero-body is-flex is-horizontal-center">
     <div class="card animate__animated animate__bounceInRight">
       <header class="card-header">
