--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,7 +1,7 @@
 <section class="sectiona">
   <div class="container is-margin-top-128px">
     <div class="columns is-multiline is-centered is-align-items-flex-end is-gapless is-mobile">
-      <%- ['fish', 'plumjam', 'mercedes', 'cx5', 'cabbage', 'pringlesky', 'houses', 'firebridge', 'artbridge', 'echobridge', 'glitchbridge'].shuffle.each_with_index do |image_name, i| -%>
+      <%- posts.shuffle.each_with_index do |image_name, i| -%>
       <%- if i == 1 -%>
       <div class="column is-half-tablet is-full-mobile">
         <div class="card animate__animated animate__swing">
